# report-comparator

./: Main.hs  Paths_report-comparator.hs  README.nd  addr.cabal  notes.nt  notes.sum  report-comparator.cabal  win-sync.sh
Address/: Digit.hs  Main.hs  Symbol.hs  Test.hs  Types.hs  Utils.hs
Main/: Analysis.hs  Extraction.hs  Main.hs  main.glade
data/: main.glade
data/tables/: addresses
notes/: Misc.nt  deploy-gentoo.nt  deploy-windows.nt  plan.nt  problems.nt  theory.nt  todo.nt
src/: ParseCSV.hs
src/Address/: Char.hs  Digit.hs  Main.hs  Symbol.hs  Test.hs  Types.hs
src/Data/: Analysis.hs  Extraction.hs  Test.hs  Types.hs
src/Data/tables/: sheet-names
src/Main/: Analysis.hs  Body.hs  EditAll.hs  Extraction.hs  Header.hs  Main.glade  Main.hs  Test.hs  Utils.hs  main.glade
src/Utils/: Addr.hs  DrawDir.hs  GTK.hs  Misc.hs  PythonStdout.hs  ToReadable.hs
src/spreadsheets/: addresses
