name:                addr
version:             0.1.0
synopsis:            ...
license:             BSD3
license-file:        LICENSE
author:              Keilys
maintainer:          krantadan@mail.ru
category:            Network
build-type:          Simple
extra-source-files:  README.sum
cabal-version:       >=1.10


library
  default-language: Haskell2010
  exposed-modules: Utils
  hs-source-dirs: Address
  build-depends:
    base,
    parsec >= 3.1


library
  default-language: Haskell2010
  exposed-modules: ParseCSV
  hs-source-dirs: ParseCSV
  build-depends:
    base,
    parsec >= 3.1


executable addr
  default-language: Haskell2010
  hs-source-dirs: Main
  main-is: Main.hs
  build-depends:
    base,
    gtk >= 0.12,
    bytestring >= 0.9,
    utf8-light >= 0.4,
    edit-distance >= 0.2,
    regex-pcre >= 0.94
